<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bleuClair"
    android:padding="5dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrondi">

            <ImageView
                android:id="@+id/imageIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/arrondi"
                android:src="@drawable/ic_launcher_background" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/nom_restau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/calligraffitti"
                android:text="@string/Nom_Resto"
                android:textColor="@color/blueFondu"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/restau_servi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="190dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/actor"
                android:text="@string/services"
                android:textColor="?android:attr/colorActivatedHighlight"
                android:textSize="18dp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/resto_hour"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/restau_servi"
                android:layout_marginLeft="190dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/abel"
                android:text="@string/horaires"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/resto_adresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nom_restau"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/blinker_thin"
                android:text="@string/Adresse_Resto"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resto_desc"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nom_restau"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/abel"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/num_resto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/aladin"
                android:text="@string/Num_Resto"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>